@@ -26,9 +26,10 @@ class !NAME! < CouchRest::ExtendedDocument
 end
 MODEL
 
-def create_model_file(name, fields)
-  model_path = destination_root('app/models/', "#{name.to_s.underscore}.rb")
-  field_tuples = fields.collect { |value| value.split(":") }
+# options => { :fields => ["title:string", "body:string"], :app => 'app' }
+def create_model_file(name, options={})
+  model_path = destination_root(options[:app], 'models', "#{name.to_s.underscore}.rb")
+  field_tuples = options[:fields].collect { |value| value.split(":") }
   column_declarations = field_tuples.collect { |field, kind| "property :#{field}" }.join("\n  ")
   model_contents = CR_MODEL.gsub(/!NAME!/, name.to_s.camelize)
   model_contents.gsub!(/!FIELDS!/, column_declarations)
