@@ -6,6 +6,7 @@
 * Added provides in controller level App.controller :provides => [:json, :xml]
 * Added compatibility with AS 3.0
 * Fixed compatibility with DM 1.0
+* Allow models to be generated in subapps with --app flag
 * Added bundler support also for testing [Thanks to Ryanfitz]
 * Updated I18n dependency to version > 0.4.0
 * Padrino now uses http_router instead of usher to handle url routing
